0.1.0rc1/_sources/examples_apps/datapreproc/component.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_apps/datapreproc/component.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_apps_datapreproc_component.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_apps_datapreproc_component.py:


Datapreproc Component Example
=============================

This is a component definition that runs the example datapreproc app.

.. GENERATED FROM PYTHON SOURCE LINES 14-69

.. code-block:: default


    from typing import Dict, Optional

    import torchx.specs as specs


    def data_preproc(
        image: str,
        output_path: str,
        entrypoint: str = "torchx/examples/apps/datapreproc/datapreproc.py",
        input_path: str = "http://cs231n.stanford.edu/tiny-imagenet-200.zip",
        env: Optional[Dict[str, str]] = None,
        resource: Optional[str] = None,
    ) -> specs.AppDef:
        """Data PreProc app.

        Data PreProc app.

        Args:
            image: Image to use
            entrypoint: User script to launch
            output_path: Url-like path to save the processes compressed images
            input_path: Url-like path to fetch the imagenet dataset
            env: Env variables to transfer to the user script
            resource: String representation of the resource
            dryrun: Starts the app, but does not actually perform any work.

        Returns:
            specs.AppDef: Torchx AppDef
        """

        env = env or {}
        args = [
            "--input_path",
            input_path,
            "--output_path",
            output_path,
        ]
        if resource:
            resource_def = specs.named_resources[resource]
        else:
            resource_def = specs.Resource(cpu=1, gpu=0, memMB=1024)
        return specs.AppDef(
            name="datapreproc",
            roles=[
                specs.Role(
                    name="worker",
                    image=image,
                    entrypoint=entrypoint,
                    args=args,
                    env=env,
                    resource=resource_def,
                )
            ],
        )


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_apps_datapreproc_component.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: component.py <component.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: component.ipynb <component.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
